# extract

./: README.md  pyproject.toml
src/: icebreaking.py
src/extract/: .extract9-12.py.swp  .extract_1_4.py.swp  extract_1_4.py  extract_5_8.py  extract_9_12.py
tests/: test_call.py
